--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: by HTML5 UP
 email: paulomoreiraesilva@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: "/paulomoreiraesilva.github.io
-url: pmoreiraesilva/paulomoreiraesilva.github.io
+url: https://paulomoreiraesilva.github.io
 author:
 street_address: 
 city: Singapore
