--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # site settings
-title: Paulo Moreira E Silva
+title: Paulo Moreira e Silva
 subtitle: by HTML5 UP
 email: paulomoreiraesilva@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
